syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

// Java代码生成选项
option java_multiple_files = true;
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "ItemProto";

// 物品使用请求
message ItemUseRequest {
  int32 index = 1;
  int32 count = 2;
  bool bind = 3;
  uint64 guid = 4;
  int32 type = 5;
  string input = 6;
  int32 selectitemindex = 7;
  repeated PT_QUEST quest = 8;
}

// 物品使用响应
message ItemUseResponse {
  int32 error = 1;
  int32 result = 2;
}

// 物品强化请求
message ItemReinforceRequest {
  int32 type = 1;
  uint64 guid = 2;
  int32 talisman = 3;
  int32 customtype = 4;
  repeated uint64 noticharlist = 5;
}

// 物品强化响应
message ItemReinforceResponse {
  int32 error = 1;
  int32 result = 2;
}

// 物品列表请求
message ItemListRequest {
  int32 type = 1;
  int32 page = 2;
}

// 物品列表响应
message ItemListResponse {
  int32 error = 1;
  repeated ItemInfo items = 2;
}

// 物品移动请求
message ItemMoveRequest {
  int32 fromIndex = 1;
  int32 toIndex = 2;
  int32 count = 3;
  uint64 guid = 4;
}

// 物品移动响应
message ItemMoveResponse {
  int32 error = 1;
  bool success = 2;
}

// 物品丢弃请求
message ItemDropRequest {
  int32 index = 1;
  int32 count = 2;
  uint64 guid = 3;
}

// 物品丢弃响应
message ItemDropResponse {
  int32 error = 1;
  bool success = 2;
}

// 物品拆分请求
message ItemSplitRequest {
  int32 index = 1;
  int32 count = 2;
  uint64 guid = 3;
}

// 物品拆分响应
message ItemSplitResponse {
  int32 error = 1;
  bool success = 2;
}

// 任务信息（简化版）
message PT_QUEST {
  int32 id = 1;
  int32 progress = 2;
}

// 物品信息（简化版）
message ItemInfo {
  int32 index = 1;
  uint64 guid = 2;
  int32 id = 3;
  int32 count = 4;
  bool bind = 5;
  int32 reinforceLevel = 6;
}
